# dotvvm-extension-vscode

./: .gitattributes  .gitignore  LICENSE  README.md  extension.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  publish.yml
completions/: DotvvmCompletionProvider.js
html/client/: colorDecorators.js  htmlEmptyTagsShared.js  htmlMain.js
html/server/modes/: cssMode.js  javascriptMode.js  languageModes.js
html/server/utils/: arrays.js  edits.js  strings.js
metadata/: bootstrap.json  businesspack.json  dotvvm.json
old-extension/: README.md
old-extension/completions/: DotvvmCompletionProvider.js
old-extension/html/server/: htmlServerMain.js  languageModelCache.js
old-extension/html/server/modes/: embeddedSupport.js  formatting.js  htmlMode.js
old-extension/metadata/: bootstrap.json
src/: .editorconfig  DotVVMCompetitionProvider.ts  build.ps1  build.sh  extension.ts
src/dothtml-basic-ls/: README.md  package.json  startServer.ts  tsconfig.json
src/dothtml-basic-ls/data/: DotVVM.AutoUI.xml  DotVVM.Framework.xml  defaultConfig-framework.json
src/dothtml-basic-ls/src/: ls-config.ts  server.ts  utils.ts
src/dothtml-basic-ls/src/lib/: DiagnosticsManager.ts  FallbackWatcher.ts  dllSeeker.ts  dotnetUtils.ts  dotvvmControlInformation.ts  dotvvmControlResolver.ts  parserutils.ts  serializedConfigSeeker.ts  superstring.d.ts  treeSitterDiagnostics.ts  xmldocCache.ts
src/dothtml-basic-ls/src/lib/documents/: Document.ts  DocumentBase.ts  DocumentManager.ts  DocumentMapper.ts  parseHtml.ts  utils.ts
src/dothtml-basic-ls/src/plugins/: PluginHost.ts  index.ts  interfaces.ts
src/dothtml-basic-ls/src/plugins/css/: CSSDocument.ts  CSSPlugin.ts  FileSystemProvider.ts  StyleAttributeDocument.ts  service.ts
src/dothtml-basic-ls/src/plugins/dotvvm/: DotvvmDocument.ts  DotvvmPlugin.ts
src/dothtml-basic-ls/src/plugins/dotvvm/features/: DotvvmCompletion.ts  SvelteTags.ts  attributeCompletion.ts  completionHelpers.ts  directiveCompletion.ts  getCompletions.ts  getDiagnostics.ts  getHoverInfo.ts  getSelectionRanges.ts  tagCompletion.ts
src/dothtml-basic-ls/src/plugins/dotvvm/features/getCodeActions/: getQuickfixes.ts  getRefactorings.ts  index.ts
src/dothtml-basic-ls/src/plugins/html/: HTMLPlugin.ts  dataProvider.ts  dothtmlDataProvider.ts
src/dothtml-basic-ls/src/plugins/svelte/: SvelteDocument.ts  SveltePlugin.ts
src/dothtml-basic-ls/src/plugins/svelte/features/: getDiagnostics.ts  getSelectionRanges.ts
src/dothtml-basic-ls/src/plugins/svelte/features/getCodeActions/: getQuickfixes.ts  index.ts
src/dothtml-basic-ls/test/: dotnetutils.test.ts  testinit.js
src/dothtml-basic-ls/test/lib/: control-resolver.test.ts  dotvvm_serialized_config.json.tmp  testingDotvvmConfig.ts
src/dothtml-basic-ls/test/lib/documents/: Document.test.ts  DocumentManager.test.ts  DocumentMapper.test.ts  parseDothtml.test.ts  parseHtml.test.ts  utils.test.ts
src/dothtml-basic-ls/test/plugins/: PluginHost.test.ts
src/dothtml-basic-ls/test/plugins/css/: CSSPlugin.test.ts
src/dothtml-basic-ls/test/plugins/css/features/: getIdClassCompletion.test.ts
src/dothtml-basic-ls/test/plugins/dothtml/: DotvvmPlugin.test.ts
src/dothtml-basic-ls/test/plugins/html/: HTMLPlugin.test.ts
src/dotnet-analyzer-lib/: AnalyzerContext.cs  AnalyzerLib.csproj  DotvvmUtils.cs  Library.cs  Library.h  NativeHelpers.cs  ObjHandle.cs  build.sh  test.c
src/dotnet-analyzer-lib/node_binding/: CMakeLists.txt  dotnet-analyzer.cc  index.js  package.json
src/dotvvm-vscode/: .vscodeignore  CHANGELOG.md  README.md  package.json
src/dotvvm-vscode/src/: extension.ts  lsinit.ts
src/dotvvm-vscode/src/syntax/: dotvvm.tmLanguage.json  dotvvm.tmLanguage.yaml
src/dotvvm-vscode/src/test/grammar/: BindingParts.dothtml  Comments.dothtml  DirectiveContent1.dothtml  DirectiveContent2.dothtml  DirectiveParts.dothtml  HtmlWithoutDirectives.dothtml
src/dotvvm-vscode/syntax/: dotvvm.tmLanguage.json  dotvvm.tmLanguage.yaml
src/native-lib-dotvvm-spy/: AnalyzerContext.cs  DotvvmUtils.cs  LibDotvvmSpy.csproj  Library.cs  Library.h  NativeHelpers.cs  ObjHandle.cs  README.md  build.ps1  build.sh  test.c
src/native-lib-dotvvm-spy/node_binding/: CMakeLists.txt  dotvvm-analyzer.cc  index.d.ts  index.js  package.json
src/native-lib-dotvvm-spy/node_binding/test/: sanitycheck.mjs
src/tree-sitter-dotvvm/: .gitignore  Cargo.toml  binding.gyp  grammar.js  package.json  tsconfig.json
src/tree-sitter-dotvvm/bindings/node/: binding.cc  index.js
src/tree-sitter-dotvvm/bindings/rust/: lib.rs
src/tree-sitter-dotvvm/dts-tree-sitter/: build-typescript-nodes.ts
src/tree-sitter-dotvvm/examples/: ServerRenderedTaskList.dothtml  test.dothtml  test1.dothtml  test2.dothtml
src/tree-sitter-dotvvm/queries/: highlights.scm
src/tree-sitter-dotvvm/src/: node-types.d.ts  scanner.cc  tag.h
src/tree-sitter-dotvvm/test/corpus/: bindings.txt  directives.txt  dothtml.txt  errors.txt  html-main.txt  html.txt
src/tree-sitter-dotvvm/test/highlight/: ServerRenderedTaskList.dothtml  binding_syntax.dothtml  keywords.dothtml
syntaxes/: dotvvm.tmLanguage.json
